
                              KijiREST Release Notes
Version 1.2.0
  * REST-41. Supports optional cross-origin resource sharing (CORS).
  * REST-89. Refresh instances automatically. Removes instance visibility
      configuration parameter. All instances on target cluster are visible.
      Manual refreshes can be triggered with a POST to the admin task
      /tasks/refresh_instances.

Version 1.1.0
  * REST-85. Add archetype for creating Kiji Rest plugins.
  * REST-63. KijiREST should have a mode to serve all Kiji instances in a cluster.
  * REST-84. kiji-rest script should allow specifying JVM arguments.
  * REST-76. KijiREST logging locations must be fully configurable
  * REST-79. Don't close the underlying Kiji instance.
  * REST-80. Correctly use KIJI_REST_CONF_DIR for location of conf directory.
  * REST-69. Modularizes KijiREST in preparation for custom endpoints.

Version 1.0.1
  * REST-50. Fix a performance issue that was causing massive slowdowns.

Version 1.0.0
  * REST-66. Incorporates native json formatted entity ids in POST.
      Cleans up row key specification language.
  * REST-64. Fix the exception handling to ensure that all exceptions
      are converted to JSON objects, stacktraces included and logged
      to the application log file on the server.
  * REST-48. Adds start_eid/end_eid and removes start_rk/end_rk.
  * REST-60. Removes the entityId endpoint of tables.
  * REST-50. Check that the table still exists before returning it in
      ManagedKijiClient.
  * REST-59. Ensure that if the writer_schema is JSON, that the server will
     accept the schema and parse it properly.

Version 0.6.0
  * REST-55. Remove an old servlet dependency. Also change the release artifact
     to not contain a single fat jar but house the runtime dependencies in the
     lib/ directory.
  * REST-54. Supports per-request freshening parameters.
  * REST-53. Remove the row endpoint. Can be accessed by /rows?eid=.